add FSDF vocabs, onts, supermodel redirect, backbone ont

--- a/conf/linked.data.gov.au-ontologies.conf
+++ b/conf/linked.data.gov.au-ontologies.conf
@@ -4,7 +4,7 @@
 
 	# http://linked.data.gov.au/def/abis
         RewriteRule ^/def/abis/overview$                       https://ausbigg.github.io/abis/overview.html [R=302,L]
-	RewriteRule ^/def/abis/specification$                  https://ausbigg.github.io/abis/specification.html [R=302,L]
+	RewriteRule ^/def/abis/spec$                           https://ausbigg.github.io/abis/specification.html [R=302,L]
 	RewriteRule ^/def/abis/validator$                      https://ausbigg.github.io/abis/validator.ttl [R=302,L]
 
         RewriteCond %{QUERY_STRING} ^_format=text/turtle$ [OR]
@@ -166,26 +166,46 @@
         RewriteRule ^/def/datatype(.*)$                         https://raw.githack.com/AGLDWG/datatype-ont/master/html/datatype.html$1 [R=302,L]
 
 
-        # http://linked.data.gov.au/def/fsdf
-	# Data Profile
-        RewriteCond %{QUERY_STRING} ^_mediatype=text/turtle$ [OR]
-        RewriteCond %{HTTP_ACCEPT} text/turtle [NC]
-        RewriteRule /def/fsdf/dp$            https://raw.githack.com/surroundaustralia/fsdf-kg/master/edg/profiles/profile.ttl [R=302,L]
-        RewriteRule /def/fsdf/dp.ttl$        https://raw.githack.com/surroundaustralia/fsdf-kg/master/edg/profiles/profile.ttl [R=302,L]
-        RewriteRule /def/fsdf/dp$            https://raw.githack.com/surroundaustralia/fsdf-kg/master/docs/profile.html [R=302,L]
-
-        RewriteRule /def/fsdf/dp/feature-validator	https://raw.githack.com/surroundaustralia/fsdf-kg/master/edg/profiles/feature-validator.ttl [R=302,L]
-        RewriteRule /def/fsdf/dp/multi-validator	https://raw.githack.com/surroundaustralia/fsdf-kg/master/edg/profiles/multi-validator.ttl [R=302,L]
-	RewriteRule /def/fsdf/dp/repo			https://github.com/surroundaustralia/fsdf-kg [R=302,L]
-
+        # http://linked.data.gov.au/def/fsdf-*
 	RewriteRule /def/fsdf-supermodel(.*)		https://geoscienceaustralia.github.io/fsdf-supermodel/supermodel.html$1 [R=302,L]
 
-	# Ontology
+        RewriteCond %{QUERY_STRING} ^_mediatype=text/turtle$ [OR]
+        RewriteCond %{HTTP_ACCEPT} text/turtle [NC]
+        RewriteRule /def/fsdf-backbone$                                 https://geoscienceaustralia.github.io/fsdf-supermodel/backbone-model-profile.ttl [R=302,L]
+        RewriteRule /def/fsdf-backbone.ttl$                             https://geoscienceaustralia.github.io/fsdf-supermodel/backbone-model-profile.ttl [R=302,L]
+        RewriteRule /def/fsdf-backbone$                                 https://geoscienceaustralia.github.io/fsdf-supermodel/backbone-model-profile.html [R=302,L]
+        RewriteRule /def/fsdf-backbone/specification$                   https://geoscienceaustralia.github.io/fsdf-supermodel/backbone-model-spec.html [R=302,L]
+        RewriteRule /def/fsdf-backbone/validator$                       https://geoscienceaustralia.github.io/fsdf-supermodel/backbone-model-validator.ttl [R=302,L]
+        RewriteRule /def/fsdf-backbone/validator-compounded$            https://geoscienceaustralia.github.io/fsdf-supermodel/backbone-model-validator-compounded.ttl [R=302,L]
+        RewriteRule /def/fsdf-backbone/repository$                      https://github.com/geoscienceaustralia/fsdf-supermodel [R=302,L]
+	RewriteRule /def/fsdf-backbone/example-sandgate$                https://geoscienceaustralia.github.io/fsdf-supermodel/backbone-model-example-sandgate.ttl [R=302,L]
+
+	# FSDF Vcoabularies
+        # https://linked.data.gov.au/def/fsdf/*
         RewriteCond %{QUERY_STRING} ^_format=text/turtle$ [OR]
         RewriteCond %{HTTP:Accept} text/turtle [NC]
-        RewriteRule ^/def/fsdf(.*)$                             https://raw.githack.com/surroundaustralia/fsdf-kg/master/edg/ontologies/fsdf.ttl [R=302,L]
-        RewriteRule ^/def/fsdf(.*).ttl$                         https://raw.githack.com/surroundaustralia/fsdf-kg/master/edg/ontologies/fsdf.ttl [R=302,L]
-        RewriteRule ^/def/fsdf(.*)$                             https://raw.githack.com/surroundaustralia/fsdf-kg/master/docs/fsdf.html$1 [R=302,L]
+        RewriteRule ^/def/fsdf/(ground-relations|observable-properties|operational-statuses|themes/buildings-and-settlements-cs|themes/physical-infrastructure-cs|themes/surface-hydrology-cs|ownership/)(.*)$                           "https://linked.fsdf.org.au/vocab/$1$2?_mediatype=text/turtle" [R=302,L]
+        RewriteRule ^/def/fsdf/(ground-relations|observable-properties|operational-statuses|themes/buildings-and-settlements-cs|themes/physical-infrastructure-cs|themes/surface-hydrology-cs|ownership/)(.*).ttl$                       "https://linked.fsdf.org.au/vocab/$1$2?_mediatype=text/turtle" [R=302,L]
+        RewriteRule ^/def/fsdf/(ground-relations|observable-properties|operational-statuses|themes/buildings-and-settlements-cs|themes/physical-infrastructure-cs|themes/surface-hydrology-cs|ownership/)(.*)$                           https://linked.fsdf.org.au/vocab/$1$2 [R=302,L]
+
+        # Ontologies
+        RewriteCond %{QUERY_STRING} ^_format=text/turtle$ [OR]
+        RewriteCond %{HTTP:Accept} text/turtle [NC]
+        RewriteRule ^/def/fsdf/common/?(.*)$                           https://raw.githubusercontent.com/GeoscienceAustralia/FSDF-KG/master/edg/ontologies/common.ttl [R=302,L]
+        RewriteRule ^/def/fsdf/common/?(.*).ttl$                       https://raw.githubusercontent.com/GeoscienceAustralia/FSDF-KG/master/edg/ontologies/common.ttl [R=302,L]
+        RewriteRule ^/def/fsdf/common/?(.*)$                           https://raw.githack.com/GeoscienceAustralia/FSDF-KG/master/docs/common.html#$1 [R=302,L,NE]
+
+        RewriteCond %{QUERY_STRING} ^_format=text/turtle$ [OR]
+        RewriteCond %{HTTP:Accept} text/turtle [NC]
+        RewriteRule ^/def/fsdf/network/?(.*)$                          https://raw.githubusercontent.com/GeoscienceAustralia/FSDF-KG/master/edg/ontologies/network.ttl [R=302,L]
+        RewriteRule ^/def/fsdf/network/?(.*).ttl$                      https://raw.githubusercontent.com/GeoscienceAustralia/FSDF-KG/master/edg/ontologies/network.ttl [R=302,L]
+        RewriteRule ^/def/fsdf/network/?(.*)$                          https://raw.githack.com/GeoscienceAustralia/FSDF-KG/master/docs/network.html#$1 [R=302,L,NE]
+
+        RewriteCond %{QUERY_STRING} ^_format=text/turtle$ [OR]
+        RewriteCond %{HTTP:Accept} text/turtle [NC]
+        RewriteRule ^/def/fsdf/?(.*)$                                  https://github.com/GeoscienceAustralia/FSDF-KG/blob/master/edg/ontologies/fsdf.ttl [R=302,L]
+        RewriteRule ^/def/fsdf/?(.*).ttl$                              https://github.com/GeoscienceAustralia/FSDF-KG/blob/master/edg/ontologies/fsdf.ttl [R=302,L]
+        RewriteRule ^/def/fsdf/?(.*)$                                  https://raw.githack.com/GeoscienceAustralia/FSDF-KG/master/docs/fsdf.html#$1 [R=302,L,NE]
 
         # GA's VocPub Profile
         RewriteRule /def/ga-vocpub/invalid.1.ttl	        https://raw.githack.com/surroundaustralia/ga-vocpub-profile/master/examples/invalid.1.ttl [R=302,L]
