--- a/conf/linked.data.gov.au-datasets.conf
+++ b/conf/linked.data.gov.au-datasets.conf
@@ -388,6 +388,37 @@
         # HTML
         RewriteRule ^\/dataset\/corveg(.*)$ https://linkeddata.tern.org.au/viewers/general?uri=http://linked.data.gov.au/dataset/corveg$1\&sparql_endpoint=https://graphdb.tern.org.au/repositories/ecoplots [R=302,L]
 
+        # https://linked.data.gov.au/dataset/bdbsa
+        # Dataset
+        # Turtle
+        RewriteCond %{QUERY_STRING} ^_format=text/turtle$ [OR]
+        RewriteCond %{HTTP:Accept} text/turtle [NC]
+        RewriteRule ^\/dataset\/bdbsa(.*)$ https://linkeddata.tern.org.au/api/v1.0/viewer/resource?uri=http://linked.data.gov.au/dataset/bdbsa$1\&sparql_endpoint=https://graphdb.tern.org.au/repositories/ecoplots&format=text/turtle [R=302,L]
+        RewriteRule ^\/dataset\/bdbsa(.*).ttl$ https://linkeddata.tern.org.au/api/v1.0/viewer/resource?uri=http://linked.data.gov.au/dataset/bdbsa$1\&sparql_endpoint=https://graphdb.tern.org.au/repositories/ecoplots&format=text/turtle [R=302,L]
+        # RDF/XML
+        RewriteCond %{QUERY_STRING} ^_format=application/rdf\+xml$ [OR]
+        RewriteCond %{HTTP:Accept} application/rdf\+xml [NC]
+        RewriteRule ^\/dataset\/bdbsa(.*)$ https://linkeddata.tern.org.au/api/v1.0/viewer/resource?uri=http://linked.data.gov.au/dataset/bdbsa$1\&sparql_endpoint=https://graphdb.tern.org.au/repositories/ecoplots&format=application/rdf+xml [R=302,L]
+        RewriteRule ^\/dataset\/bdbsa(.*).rdf$ https://linkeddata.tern.org.au/api/v1.0/viewer/resource?uri=http://linked.data.gov.au/dataset/bdbsa$1\&sparql_endpoint=https://graphdb.tern.org.au/repositories/ecoplots&format=application/rdf+xml [R=302,L]
+        # N-Triples
+        RewriteCond %{QUERY_STRING} ^_format=application/n-triples$ [OR]
+        RewriteCond %{HTTP:Accept} application/n-triples [NC]
+        RewriteRule ^\/dataset\/bdbsa(.*)$ https://linkeddata.tern.org.au/api/v1.0/viewer/resource?uri=http://linked.data.gov.au/dataset/bdbsa$1\&sparql_endpoint=https://graphdb.tern.org.au/repositories/ecoplots&format=application/n-triples [R=302,L]
+        RewriteRule ^\/dataset\/bdbsa(.*).nt$ https://linkeddata.tern.org.au/api/v1.0/viewer/resource?uri=http://linked.data.gov.au/dataset/bdbsa$1\&sparql_endpoint=https://graphdb.tern.org.au/repositories/ecoplots&format=application/n-triples [R=302,L]
+        # JSON-LD
+        RewriteCond %{QUERY_STRING} ^_format=application/ld\+json$ [OR]
+        RewriteCond %{HTTP:Accept} application/ld\+json [NC]
+        RewriteRule ^\/dataset\/bdbsa(.*)$ https://linkeddata.tern.org.au/api/v1.0/viewer/resource?uri=http://linked.data.gov.au/dataset/bdbsa$1\&sparql_endpoint=https://graphdb.tern.org.au/repositories/ecoplots&format=application/ld+json [R=302,L]
+        RewriteRule ^\/dataset\/bdbsa(.*).jsonld$ https://linkeddata.tern.org.au/api/v1.0/viewer/resource?uri=http://linked.data.gov.au/dataset/bdbsa$1\&sparql_endpoint=https://graphdb.tern.org.au/repositories/ecoplots&format=application/ld+json [R=302,L]
+        # Notation3
+        RewriteCond %{QUERY_STRING} ^_format=text/n3$ [OR]
+        RewriteCond %{HTTP:Accept} text/n3 [NC]
+        RewriteRule ^\/dataset\/bdbsa(.*)$ https://linkeddata.tern.org.au/api/v1.0/viewer/resource?uri=http://linked.data.gov.au/dataset/bdbsa$1\&sparql_endpoint=https://graphdb.tern.org.au/repositories/ecoplots&format=text/n3 [R=302,L]
+        RewriteRule ^\/dataset\/bdbsa(.*).n3$ https://linkeddata.tern.org.au/api/v1.0/viewer/resource?uri=http://linked.data.gov.au/dataset/bdbsa$1\&sparql_endpoint=https://graphdb.tern.org.au/repositories/ecoplots&format=text/n3 [R=302,L]
+        # .owl file extension
+        RewriteRule ^\/dataset\/bdbsa(.*).owl$ https://linkeddata.tern.org.au/api/v1.0/viewer/resource?uri=http://linked.data.gov.au/dataset/bdbsa$1\&sparql_endpoint=https://graphdb.tern.org.au/repositories/ecoplots&format=text/turtle [R=302,L]
+        # HTML
+        RewriteRule ^/dataset/bdbsa(.*)$ https://linkeddata.tern.org.au/viewers/general?uri=http://linked.data.gov.au/dataset/bdbsa$1&sparql_endpoint=https://graphdb.tern.org.au/repositories/ecoplots [R=302,L]
 
 
         # Linksets
