Update nrm vocabs redirect rules

--- a/conf/linked.data.gov.au-vocabularies.conf
+++ b/conf/linked.data.gov.au-vocabularies.conf
@@ -94,11 +94,13 @@
         RewriteRule ^/def/idn-role-codes(.*)$                  https://idn-au.github.io/idn-role-codes-voc/idn-role-codes.html$1 [R=302,L]
 
         # https://linked.data.gov.au/def/nrm
+	# Turtle
         RewriteCond %{QUERY_STRING} ^_format=text/turtle$ [OR]
         RewriteCond %{HTTP:Accept} text/turtle [NC]
-        RewriteRule ^/def/nrm				       https://linkeddata.tern.org.au/api/v1.0/resource?repository_id=dawe_vocabs_core&uri=https://linked.data.gov.au/def/nrm [R=302,L]
-        RewriteRule ^/def/nrm.ttl			       https://linkeddata.tern.org.au/api/v1.0/resource?repository_id=dawe_vocabs_core&uri=https://linked.data.gov.au/def/nrm [R=302,L]
-        RewriteRule ^/def/nrm                                  https://linkeddata.tern.org.au/viewers/dawe-vocabs?uri=https://linked.data.gov.au/def/nrm [R=302,L]
+        RewriteRule ^/def/nrm(.*)$			       https://linkeddata.tern.org.au/api/v1.0/viewer/resource?sparql_endpoint=https://graphdb.tern.org.au/repositories/dawe_vocabs_core&format=text/turtle&uri=https://linked.data.gov.au/def/nrm$1 [R=302,L]
+        RewriteRule ^/def/nrm(.*).ttl$			       https://linkeddata.tern.org.au/api/v1.0/viewer/resource?sparql_endpoint=https://graphdb.tern.org.au/repositories/dawe_vocabs_core&format=text/turtle&uri=https://linked.data.gov.au/def/nrm$1 [R=302,L]
+        # HTML
+	RewriteRule ^/def/nrm(.*)$                             https://linkeddata.tern.org.au/viewers/dawe-vocabs?uri=https://linked.data.gov.au/def/nrm$1 [R=302,L]
 
         # http://linked.data.gov.au/def/reg-roles
         RewriteCond %{QUERY_STRING} ^_mediatype=text/turtle$ [OR]
