--- a/conf/linked.data.gov.au-vocabularies.conf
+++ b/conf/linked.data.gov.au-vocabularies.conf
@@ -99,6 +99,21 @@
         RewriteCond %{HTTP:Accept} text/turtle [NC]
         RewriteRule ^/def/nrm(.*)$			       https://linkeddata.tern.org.au/api/v1.0/viewer/resource?sparql_endpoint=https://graphdb.tern.org.au/repositories/dawe_vocabs_core&format=text/turtle&uri=https://linked.data.gov.au/def/nrm$1 [R=302,L]
         RewriteRule ^/def/nrm(.*).ttl$			       https://linkeddata.tern.org.au/api/v1.0/viewer/resource?sparql_endpoint=https://graphdb.tern.org.au/repositories/dawe_vocabs_core&format=text/turtle&uri=https://linked.data.gov.au/def/nrm$1 [R=302,L]
+        # RDF/XML
+        RewriteCond %{QUERY_STRING} ^_format=application/rdf\+xml$ [OR]
+        RewriteCond %{HTTP:Accept} application/rdf\+xml [NC]
+        RewriteRule ^/def/nrm(.*)$			       https://linkeddata.tern.org.au/api/v1.0/viewer/resource?sparql_endpoint=https://graphdb.tern.org.au/repositories/dawe_vocabs_core&format=application/rdf+xml&uri=https://linked.data.gov.au/def/nrm$1 [R=302,L]
+        RewriteRule ^/def/nrm(.*).rdf$			       https://linkeddata.tern.org.au/api/v1.0/viewer/resource?sparql_endpoint=https://graphdb.tern.org.au/repositories/dawe_vocabs_core&format=application/rdf+xml&uri=https://linked.data.gov.au/def/nrm$1 [R=302,L]
+        # N-Triples
+        RewriteCond %{QUERY_STRING} ^_format=application/n-triples$ [OR]
+        RewriteCond %{HTTP:Accept} application/n-triples [NC]
+        RewriteRule ^/def/nrm(.*)$			       https://linkeddata.tern.org.au/api/v1.0/viewer/resource?sparql_endpoint=https://graphdb.tern.org.au/repositories/dawe_vocabs_core&format=application/n-triples&uri=https://linked.data.gov.au/def/nrm$1 [R=302,L]
+        RewriteRule ^/def/nrm(.*).nt$			       https://linkeddata.tern.org.au/api/v1.0/viewer/resource?sparql_endpoint=https://graphdb.tern.org.au/repositories/dawe_vocabs_core&format=application/n-triples&uri=https://linked.data.gov.au/def/nrm$1 [R=302,L]
+        # JSON-LD
+        RewriteCond %{QUERY_STRING} ^_format=application/ld\+json$ [OR]
+        RewriteCond %{HTTP:Accept} application/ld\+json [NC]
+        RewriteRule ^/def/nrm(.*)$			       https://linkeddata.tern.org.au/api/v1.0/viewer/resource?sparql_endpoint=https://graphdb.tern.org.au/repositories/dawe_vocabs_core&format=application/ld+json&uri=https://linked.data.gov.au/def/nrm$1 [R=302,L]
+        RewriteRule ^/def/nrm(.*).jsonld$		       https://linkeddata.tern.org.au/api/v1.0/viewer/resource?sparql_endpoint=https://graphdb.tern.org.au/repositories/dawe_vocabs_core&format=application/ld+json&uri=https://linked.data.gov.au/def/nrm$1 [R=302,L]
         # HTML
 	RewriteRule ^/def/nrm(.*)$                             https://linkeddata.tern.org.au/viewers/dawe-vocabs?uri=https://linked.data.gov.au/def/nrm$1 [R=302,L]
 
