National Species List vocabulary

--- a/conf/linked.data.gov.au-vocabularies.conf
+++ b/conf/linked.data.gov.au-vocabularies.conf
@@ -321,6 +321,13 @@
         RewriteRule ^/def/minerals(.*)$ "https://vocabs.gsq.digital/object?vocab_id=minerals&uri=http://linked.data.gov.au/def/minerals$1&_mediatype=text/turtle" [R=302,L]
         RewriteRule ^/def/minerals(.*)$ "https://vocabs.gsq.digital/object?vocab_id=minerals&uri=http://linked.data.gov.au/def/minerals$1" [R=302,NE,L]
 
+	# National Species List Vocabulary
+	RewriteRule ^/def/nslvoc.ttl$ "https://biodiversity.org.au/voc/aunsl.ttl" [R=302,NE,L]
+        RewriteCond %{QUERY_STRING} ^_mediatype=text/turtle$ [OR]
+        RewriteCond %{HTTP:Accept} text/turtle [NC]
+        RewriteRule ^/def/nslvoc(.*)$ "https://biodiversity.org.au/voc/aunsl.ttl" [R=302,NE,L]
+        RewriteRule ^/def/nslvoc(.*)$ "https://biodiversity.org.au/voc/aunsl.html" [R=302,NE,L]
+
         RewriteCond %{QUERY_STRING} ^_mediatype=text/turtle$ [OR]
         RewriteCond %{HTTP:Accept} text/turtle [NC]
         RewriteRule ^/def/observation-detail-type(.*)$ "https://vocabs.gsq.digital/object?vocab_id=observation-detail-type&uri=http://linked.data.gov.au/def/observation-detail-type$1&_mediatype=text/turtle" [R=302,L]
