--- a/conf/linked.data.gov.au-ontologies.conf
+++ b/conf/linked.data.gov.au-ontologies.conf
@@ -35,6 +35,24 @@
         RewriteRule ^/def/agrif(.*)$                            https://raw.githack.com/agldwg/agrif-ont/master/agrif.html$1 [R=302,L]
 
 
+	# https://linked.data.gov.au/def/anzgeodcat
+        RewriteCond %{QUERY_STRING} ^_format=text/turtle$ [OR]
+        RewriteCond %{HTTP:Accept} text/turtle [NC]
+	RewriteRule ^/def/anzgeodcat                            https://kurrawong.github.io/anzgeodcat/profile/profile.ttl [R=302,L]
+	RewriteRule ^/def/anzgeodcat.ttl$                       https://kurrawong.github.io/anzgeodcat/profile/profile.ttl [R=302,L]
+	RewriteRule ^/def/anzgeodcat$				https://kurrawong.github.io/anzgeodcat/profile/profile.html [R=302,L]
+	
+	RewriteRule ^/def/anzgeodcat/guide			https://kurrawong.github.io/anzgeodcat/profile/resources/guide.html [R=302,L]
+	RewriteRule ^/def/anzgeodcat/spec			https://kurrawong.github.io/anzgeodcat/profile/resources/spec.html [R=302,L]
+	RewriteRule ^/def/anzgeodcat/fsdf			https://kurrawong.github.io/anzgeodcat/profile/resources/mappings/fsdf.html [R=302,L]
+	RewriteRule ^/def/anzgeodcat/idncp			https://kurrawong.github.io/anzgeodcat/profile/resources/mappings/idncp.html [R=302,L]
+	RewriteRule ^/def/anzgeodcat/iso19115$			https://kurrawong.github.io/anzgeodcat/profile/resources/mappings/iso19115.html [R=302,L]
+        RewriteRule ^/def/anzgeodcat/iso19115.py                https://kurrawong.github.io/anzgeodcat/profile/resources/mappings/iso19115.py [R=302,L]
+	RewriteRule ^/def/anzgeodcat/sdo$			https://kurrawong.github.io/anzgeodcat/profile/resources/mappings/sdo.html [R=302,L]
+	RewriteRule ^/def/anzgeodcat/sdo.ttl			https://kurrawong.github.io/anzgeodcat/profile/resources/mappings/sdo.ttl [R=302,L]
+
+
+
         # http://linked.data.gov.au/def/asgs
         RewriteCond %{QUERY_STRING} ^_format=text/turtle$ [OR]
         RewriteCond %{HTTP:Accept} text/turtle [NC]
