Tidy Profiles' List

--- a/conf/w3id.org.conf
+++ b/conf/w3id.org.conf
@@ -8,6 +8,13 @@
 
     # w3id.org/profile/
 
+    # Drop-Down Profile
+    RewriteCond %{QUERY_STRING} ^_mediatype=text/turtle$ [OR]
+    RewriteCond %{HTTP_ACCEPT} text/turtle [NC]
+    RewriteRule w3id.org/profile/dd$                   https://kurrawong.github.io/w3id-profiles/dd.ttl [R=302,L]
+    RewriteRule w3id.org/profile/dd.ttl$               https://kurrawong.github.io/w3id-profiles/dd.ttl [R=302,L]
+    RewriteRule w3id.org/profile/dd                    https://kurrawong.github.io/w3id-profiles/dd [R=302,L]
+
     # ANZ National Address Model - Candidate     
     RewriteCond %{QUERY_STRING} ^_mediatype=text/turtle$ [OR]
     RewriteCond %{HTTP_ACCEPT} text/turtle [NC]
@@ -43,6 +50,27 @@
     RewriteRule w3id.org/profile/dcatnull.ttl$                  https://raw.githubusercontent.com/nicholascar/dcatnull-profile/main/profile.ttl [R=302,L]
     RewriteRule w3id.org/profile/dcatnull$                      https://github.com/nicholascar/dcatnull-profile [R=302,L]
 
+    # GA Samples Profile              
+    RewriteCond %{QUERY_STRING} ^_mediatype=text/turtle$ [OR]
+    RewriteCond %{HTTP_ACCEPT} text/turtle [NC]
+    RewriteRule w3id.org/profile/gas$                   https://kurrawong.github.io/w3id-profiles/gas.ttl [R=302,L]
+    RewriteRule w3id.org/profile/gas.ttl$               https://kurrawong.github.io/w3id-profiles/gas.ttl [R=302,L]
+    RewriteRule w3id.org/profile/gas                    https://kurrawong.github.io/w3id-profiles/gas [R=302,L]
+
+    # GA SpacePrez Profile
+    RewriteCond %{QUERY_STRING} ^_mediatype=text/turtle$ [OR]
+    RewriteCond %{HTTP_ACCEPT} text/turtle [NC]
+    RewriteRule w3id.org/profile/ga-spaceprez$                   https://kurrawong.github.io/w3id-profiles/ga-spaceprez.ttl [R=302,L]
+    RewriteRule w3id.org/profile/ga-spaceprez.ttl$               https://kurrawong.github.io/w3id-profiles/ga-spaceprez.ttl [R=302,L]
+    RewriteRule w3id.org/profile/ga-spaceprez                    https://kurrawong.github.io/w3id-profiles/ga-spaceprez [R=302,L]
+
+    # Members Profile
+    RewriteCond %{QUERY_STRING} ^_mediatype=text/turtle$ [OR]
+    RewriteCond %{HTTP_ACCEPT} text/turtle [NC]
+    RewriteRule w3id.org/profile/mem$                   https://kurrawong.github.io/w3id-profiles/mem.ttl [R=302,L]
+    RewriteRule w3id.org/profile/mem.ttl$               https://kurrawong.github.io/w3id-profiles/mem.ttl [R=302,L]
+    RewriteRule w3id.org/profile/mem                    https://kurrawong.github.io/w3id-profiles/mem [R=302,L]
+
     # OGC LD API Profile
     RewriteCond %{QUERY_STRING} ^_mediatype=text/turtle$ [OR]
     RewriteCond %{HTTP_ACCEPT} text/turtle [NC]
@@ -70,6 +98,13 @@
     RewriteRule w3id.org/profile/ontpub/example-01-valid        https://agldwg.github.io/ontpub-profile/example-01-valid.ttl [R=302,L]
     RewriteRule w3id.org/profile/ontpub/example-01-invalid      https://agldwg.github.io/ontpub-profile/example-01-invalid.ttl [R=302,L]
     RewriteRule w3id.org/profile/ontpub/repo                    https://github.com/agldwg/ontpub-profile [R=302,L]
+
+    # Prez Profile              
+    RewriteCond %{QUERY_STRING} ^_mediatype=text/turtle$ [OR]
+    RewriteCond %{HTTP_ACCEPT} text/turtle [NC]
+    RewriteRule w3id.org/profile/prez$                   https://kurrawong.github.io/w3id-profiles/prez.ttl [R=302,L]
+    RewriteRule w3id.org/profile/prez.ttl$               https://kurrawong.github.io/w3id-profiles/prez.ttl [R=302,L]
+    RewriteRule w3id.org/profile/prez                    https://kurrawong.github.io/w3id-profiles/prez [R=302,L]
 
     # ProfCat Profile
     RewriteCond %{QUERY_STRING} ^_mediatype=text/turtle$ [OR]
