--- a/conf/w3id.org.conf
+++ b/conf/w3id.org.conf
@@ -18,9 +18,9 @@
     # ANZ National Address Model - Candidate     
     RewriteCond %{QUERY_STRING} ^_mediatype=text/turtle$ [OR]
     RewriteCond %{HTTP_ACCEPT} text/turtle [NC]
-    RewriteRule w3id.org/profile/anz-address$                   http://nicholascar.com/anz-nat-addr-model-candidate/model.ttl [R=302,L]
-    RewriteRule w3id.org/profile/anz-address.ttl$               http://nicholascar.com/anz-nat-addr-model-candidate/model.ttl [R=302,L]
-    RewriteRule w3id.org/profile/anz-address                    http://nicholascar.com/anz-nat-addr-model-candidate/model.html [R=302,L]
+    RewriteRule w3id.org/profile/anz-address$                   https://spatial-information-qld.github.io/address-model/model.ttl [R=302,L]
+    RewriteRule w3id.org/profile/anz-address.ttl$               https://spatial-information-qld.github.io/address-model/model.ttl [R=302,L]
+    RewriteRule w3id.org/profile/anz-address                    https://spatial-information-qld.github.io/address-model/model [R=302,L]
 
     # Concise Bounded Description Profile Profile
     RewriteCond %{QUERY_STRING} ^_mediatype=text/turtle$ [OR]
@@ -138,9 +138,9 @@
     # Queensland Spatial Information Place Names Model
     RewriteCond %{QUERY_STRING} ^_mediatype=text/turtle$ [OR]
     RewriteCond %{HTTP_ACCEPT} text/turtle [NC]
-    RewriteRule w3id.org/profile/qsi-placenames$                   http://nicholascar.com/qsi-supermodel/placenames/ [R=302,L]
-    RewriteRule w3id.org/profile/qsi-placenames.ttl$               http://nicholascar.com/qsi-supermodel/placenames/model.ttl [R=302,L]
-    RewriteRule w3id.org/profile/qsi-placenames                    http://nicholascar.com/qsi-supermodel/placenames/ [R=302,L]
+    RewriteRule w3id.org/profile/qsi-placenames$                   https://spatial-information-qld.github.io/supermodel/placenames/model.ttl [R=302,L]
+    RewriteRule w3id.org/profile/qsi-placenames.ttl$               https://spatial-information-qld.github.io/supermodel/placenames/model.ttl [R=302,L]
+    RewriteRule w3id.org/profile/qsi-placenames                    https://spatial-information-qld.github.io/supermodel/placenames/ [R=302,L]
 
     # VocPrez Profile
     RewriteCond %{QUERY_STRING} ^_mediatype=text/turtle$ [OR]
