--- a/conf/linked.data.gov.au-ontologies.conf
+++ b/conf/linked.data.gov.au-ontologies.conf
@@ -448,7 +448,8 @@
         RewriteCond %{HTTP:Accept} text/turtle [NC]
         RewriteRule ^/def/geofabric                             https://csiro-enviro-informatics.github.io/geofabric-ont//geofabric.ttl? [R=302,L]
         RewriteRule ^/def/geofabric.ttl$                        https://csiro-enviro-informatics.github.io/geofabric-ont//geofabric.ttl [R=302,L]
-        RewriteRule ^/def/geofabric(.*)$                        https://csiro-enviro-informatics.github.io/geofabric-ont/geofabric.html$1 [R=302,L]
+        RewriteRule ^/def/geofabric$                            https://csiro-enviro-informatics.github.io/geofabric-ont/geofabric.html$1 [R=302,L]
+	RewriteRule ^/def/geofabric/(.*)                        https://csiro-enviro-informatics.github.io/geofabric-ont/geofabric.html\#$1 [R=302,L,NE]
 
 	# Dept Ag, Water & Environment's Plant Health Surveillance ontology
         # http://linked.data.gov.au/def/phs
