--- a/conf/test.linked.data.gov.au.conf
+++ b/conf/test.linked.data.gov.au.conf
@@ -13,7 +13,7 @@
         ErrorLog ${APACHE_LOG_DIR}/test.linked.data.gov.au/error.log
         CustomLog ${APACHE_LOG_DIR}/test.linked.data.gov.au/access.log combined
 
-
+	RewriteRule ^/dataset/wa/wells/(.*)$	http://gswaprez.australiaeast.azurecontainer.io/dataset/gswa-dataset/collections/wells/items/$1 [R=302,L]
 
 	# LongSpine Onts
 
