--- a/conf/linked.data.gov.au-vocabularies.conf
+++ b/conf/linked.data.gov.au-vocabularies.conf
@@ -459,6 +459,11 @@
         RewriteCond %{HTTP:Accept} text/turtle [NC]
         RewriteRule ^/def/sample-type(.*)$ "https://vocabs.gsq.digital/object?vocab_id=sample-type&uri=http://linked.data.gov.au/def/sample-type$1&_mediatype=text/turtle" [R=302,L]
         RewriteRule ^/def/sample-type(.*)$ "https://vocabs.gsq.digital/object?vocab_id=sample-type&uri=http://linked.data.gov.au/def/sample-type$1" [R=302,NE,L]
+	
+	RewriteCond %{QUERY_STRING} ^_mediatype=text/turtle$ [OR]
+	RewriteCond %{HTTP:Accept} text/turtle [NC]
+	RewriteRule ^/def/sampling-method(.*)$ "https://vocabs.gsq.digital/object?vocab_id=sampling-method&uri=https://linked.data.gov.au/def/sampling-method$1&_mediatype=text/turtle" [R=302,L]
+	RewriteRule ^/def/sampling-method(.*)$ "https://vocabs.gsq.digital/object?vocab_id=sampling-method&uri=http://linked.data.gov.au/def/sampling-method$1" [R=302,NE,L]
 
         RewriteCond %{QUERY_STRING} ^_mediatype=text/turtle$ [OR]
         RewriteCond %{HTTP:Accept} text/turtle [NC]
