--- a/conf/0-linked.data.gov.au-le-ssl.conf
+++ b/conf/0-linked.data.gov.au-le-ssl.conf
@@ -4,7 +4,7 @@
 
         RewriteEngine  on
 
-        ServerAdmin nicholas.car@surroundaustralia.com
+        ServerAdmin nicholas.car@anu.edu.au
 	LogLevel warn rewrite:trace3
         ErrorLog ${APACHE_LOG_DIR}/linked.data.gov.au/error.log
         CustomLog ${APACHE_LOG_DIR}/linked.data.gov.au/access.log combined
@@ -24,7 +24,6 @@
         Include /etc/apache2/sites-available/linked.data.gov.au-datasets.conf
         Include /etc/apache2/sites-available/linked.data.gov.au-ontologies.conf
         Include /etc/apache2/sites-available/linked.data.gov.au-vocabularies.conf        
-        
 
 	#
 	#	Proxy
