--- a/conf/linked.data.gov.au-ontologies.conf
+++ b/conf/linked.data.gov.au-ontologies.conf
@@ -512,5 +512,9 @@
 #        RewriteRule ^/def/su$                             https://raw.githack.com/surroundaustralia/su-ont/master/profile.html [R=303,L]
 
         # https://linked.data.gov.au/def/supermodel
-        RewriteRule ^/def/supermodel$                         https://nicholascar.com/supermodel/ [R=303,L]
+        RewriteRule ^/def/supermodel$                   https://nicholascar.com/supermodel/ [R=303,L]
 
+	RewriteRule ^/def/qsi-supermodel$               https://spatial-information-qld.github.io/supermodel/supermodel.html [R=303,L]	
+	RewriteRule ^/def/addr$				https://spatial-information-qld.github.io/address-model/model.html [R=303,L]
+        RewriteRule ^/def/roads$                        https://spatial-information-qld.github.io/roads-model/model.html [R=303,L]
+        RewriteRule ^/def/cad$                          https://spatial-information-qld.github.io/cadastre-model/ [R=303,L]
