--- a/conf/0-linked.data.gov.au-le-ssl.conf
+++ b/conf/0-linked.data.gov.au-le-ssl.conf
@@ -25,6 +25,7 @@
         Include /etc/apache2/sites-available/linked.data.gov.au-ontologies.conf
         Include /etc/apache2/sites-available/linked.data.gov.au-vocabularies.conf        
         Include /etc/apache2/sites-available/linked.data.gov.au-gsq.conf
+        Include /etc/apache2/sites-available/linked.data.gov.au-apo.conf
 
 	#
 	#	Proxy
