GSQ /def/sampling-method

--- a/conf/linked.data.gov.au-gsq.conf
+++ b/conf/linked.data.gov.au-gsq.conf
@@ -400,6 +400,11 @@ RewriteRule ^/def/sample-type(.*)$ "https://vocabs.gsq.digital/object?vocab_id=s
 
 RewriteCond %{QUERY_STRING} ^_mediatype=text/turtle$ [OR]
 RewriteCond %{HTTP:Accept} text/turtle [NC]
+RewriteRule ^/def/sampling-method(.*)$ "https://vocabs.gsq.digital/object?vocab_id=sampling-method&uri=http://linked.data.gov.au/def/sampling-method$1&_mediatype=text/turtle" [R=302,L]
+RewriteRule ^/def/sampling-method(.*)$ "https://vocabs.gsq.digital/object?vocab_id=sampling-method&uri=http://linked.data.gov.au/def/sampling-method$1" [R=302,NE,L]
+
+RewriteCond %{QUERY_STRING} ^_mediatype=text/turtle$ [OR]
+RewriteCond %{HTTP:Accept} text/turtle [NC]
 RewriteRule ^/def/seismic-dimensionality(.*)$ "https://vocabs.gsq.digital/object?vocab_id=seismic-dimensionality&uri=http://linked.data.gov.au/def/seismic-dimensionality$1&_mediatype=text/turtle" [R=302,L]
 RewriteRule ^/def/seismic-dimensionality(.*)$ "https://vocabs.gsq.digital/object?vocab_id=seismic-dimensionality&uri=http://linked.data.gov.au/def/seismic-dimensionality$1" [R=302,NE,L]
 
