GSQ /def/geofeatures fix

--- a/conf/linked.data.gov.au-gsq.conf
+++ b/conf/linked.data.gov.au-gsq.conf
@@ -88,8 +88,8 @@ RewriteRule ^/def/geoadminfeatures(.*)$ "https://vocabs.gsq.digital/object?vocab
 
 RewriteCond %{QUERY_STRING} ^_mediatype=text/turtle$ [OR]
 RewriteCond %{HTTP:Accept} text/turtle [NC]
-RewriteRule ^/def/geofeatures(.*)$ "https://vocabs.gsq.digital/object?vocab_id=geofeatures&uri=http://linked.data.gov.au/def/geofeatures$1&_mediatype=text/turtle" [R=302,L]
-RewriteRule ^/def/geofeatures(.*)$ "https://vocabs.gsq.digital/object?vocab_id=geofeatures&uri=http://linked.data.gov.au/def/geofeatures$1" [R=302,NE,L]
+RewriteRule ^/def/geofeatures(.*)$ "https://vocabs.gsq.digital/object?vocab_id=geofeatures&uri=https://linked.data.gov.au/def/geofeatures$1&_mediatype=text/turtle" [R=302,L]
+RewriteRule ^/def/geofeatures(.*)$ "https://vocabs.gsq.digital/object?vocab_id=geofeatures&uri=https://linked.data.gov.au/def/geofeatures$1" [R=302,NE,L]
 
 RewriteCond %{QUERY_STRING} ^_mediatype=text/turtle$ [OR]
 RewriteCond %{HTTP:Accept} text/turtle [NC]
@@ -488,6 +488,9 @@ RewriteRule ^/def/borehole(.*)$                         https://raw.githack.com/
 
 
 # https://linked.data.gov.au/def/geofeatures
+#
+#   NOTE: currently /def/geofeatures resolves to a SKOS vocab, see mapping above, so the following are inactive
+#
 # profile: Alt, meadiatype: turtle
 RewriteCond %{QUERY_STRING} _profile=alt
 RewriteCond %{QUERY_STRING} _mediatype=text/turtle
