AusBIGG patterns update

--- a/conf/linked-ausbigg.conf
+++ b/conf/linked-ausbigg.conf
@@ -3,6 +3,7 @@
 RewriteRule ^/def/abis/overview$                        https://ausbigg.github.io/abis/overview.html [R=302,L]
 RewriteRule ^/def/abis/spec$                            https://ausbigg.github.io/abis/specification.html [R=302,L]
 RewriteRule ^/def/abis/validator$                       https://ausbigg.github.io/abis/validator.ttl [R=302,L]
+RewriteRule ^/def/abis/context.json$                    https://ausbigg.github.io/abis/context.json [R=302,L]
 
 # Schema
 RewriteCond %{QUERY_STRING} ^_format=text/turtle$ [OR]
@@ -12,14 +13,14 @@ RewriteRule ^/def/abis.ttl$                             https://ausbigg.github.i
 RewriteRule ^/def/abis$                                 https://ausbigg.github.io/abis/standard.html [R=302,L]
 
 # Specification Parts
-RewriteRule ^/def/abis/$                                https://ausbigg.github.io/abis/specification.html\#_namespaces [R=302,L]
-RewriteRule ^/def/abis/req/$                            https://ausbigg.github.io/abis/specification.html\#_requirements [R=302,L]
+RewriteRule ^/def/abis/$                                https://ausbigg.github.io/abis/specification.html\#_namespaces [R=302,L,NE]
+RewriteRule ^/def/abis/req/$                            https://ausbigg.github.io/abis/specification.html\#_requirements [R=302,L,NE]
 # rules
-RewriteRule ^/def/abis/req/$                            https://ausbigg.github.io/abis/specification.html\#_conformance_classes [R=302,L]
-RewriteRule ^/def/abis/eg/$                             https://ausbigg.github.io/abis/specification.html\#_examples [R=302,L]
-RewriteRule ^/def/abis/sh/(.*)$                         https://raw.githubusercontent.com/AusBIGG/abis/master/validator.ttl [R=302,L]
+RewriteRule ^/def/abis/req/$                            https://ausbigg.github.io/abis/specification.html\#_conformance_classes [R=302,L,NE]
+RewriteRule ^/def/abis/eg/$                             https://ausbigg.github.io/abis/specification.html\#_examples [R=302,L,NE]
+RewriteRule ^/def/abis/sh/(.*)$                         https://raw.githubusercontent.com/AusBIGG/abis/master/validator.ttl [R=302,L,NE]
 
 
 # BDR Messages Ontology
-RewriteRule ^/def/bdr-msg/                              https://ausbigg.github.io/abis/bdrm-ont/bdrm.html [R=302,L]
-RewriteRule ^/def/bdr-msg/status/                       https://ausbigg.github.io/abis/bdrm-ont/bdrm.html [R=302,L]
+RewriteRule ^/def/bdr-msg/                              https://ausbigg.github.io/bdrm-ont/bdrm.html [R=302,L]
+RewriteRule ^/def/bdr-msg/status/                       https://ausbigg.github.io/bdrm-ont/bdrm.html [R=302,L]
