--- a/conf/linked.conf
+++ b/conf/linked.conf
@@ -31,6 +31,7 @@
         # Per-organisation
         Include /etc/apache2/sites-available/linked-agldwg.conf
         Include /etc/apache2/sites-available/linked-apo.conf
+	Include /etc/apache2/sites-available/linked-ausbigg.conf
         Include /etc/apache2/sites-available/linked-gsq.conf
         Include /etc/apache2/sites-available/linked-icsm.conf
         Include /etc/apache2/sites-available/linked-qsi.conf
