all patterns by org

--- a/conf/linked.data.gov.au/linked.conf
+++ b/conf/linked.data.gov.au/linked.conf
@@ -24,17 +24,10 @@
         #
         #	PIDs
         #
-        Include /etc/apache2/sites-available/linked-regs.conf
-        Include /etc/apache2/sites-available/linked-datasets.conf
-        Include /etc/apache2/sites-available/linked-onts.conf
-        Include /etc/apache2/sites-available/linked-vocs.conf
-        # Per-organisation
-        Include /etc/apache2/sites-available/linked-agldwg.conf
-        Include /etc/apache2/sites-available/linked-apo.conf
-	Include /etc/apache2/sites-available/linked-ausbigg.conf
-        Include /etc/apache2/sites-available/linked-gsq.conf
-        Include /etc/apache2/sites-available/linked-icsm.conf
-        Include /etc/apache2/sites-available/linked-qsi.conf
+        # System PIDs
+        Include /etc/apache2/sites-available/linked.data.gov.au/org/regs.conf
+        # Per-organisation PIDs
+        Include /etc/apache2/sites-available/linked.data.gov.au/org/*.conf
 
         #
         #	Proxy
