fix regs.conf location

--- a/conf/linked.data.gov.au/linked.conf
+++ b/conf/linked.data.gov.au/linked.conf
@@ -25,7 +25,7 @@
         #	PIDs
         #
         # System PIDs
-        Include /etc/apache2/sites-available/linked.data.gov.au/org/regs.conf
+        Include /etc/apache2/sites-available/linked.data.gov.au/regs.conf
         # Per-organisation PIDs
         Include /etc/apache2/sites-available/linked.data.gov.au/org/*.conf
 
