declare ports for legacy PID domains

--- a/conf/environment.data.gov.au.conf
+++ b/conf/environment.data.gov.au.conf
@@ -5,7 +5,7 @@
 #
 # Implemented from PID Svc rules by Edmond Chuc, 13/08/2018
 # Major updates by Nicholas Car in March, 2021
-<VirtualHost *>
+<VirtualHost *:80 *:443>
     ServerName environment.data.gov.au
 
 	ErrorLog ${APACHE_LOG_DIR}/environment.data.gov.au/error.log
