--- a/conf/reference.data.gov.au.conf
+++ b/conf/reference.data.gov.au.conf
@@ -6,7 +6,7 @@
 # Implemented from PID Svc rules by Nicholas Car, 13/08/2018, with the single entry logic of delegating all pattern handling
 # to the AGLDWG production web server since only simple static files are referred to in this domain.
 #
-<VirtualHost *>
+<VirtualHost *:80 *:443>
         ServerName reference.data.gov.au
 
         #
