added missign prof-roles, fixed reg-status TTL

--- a/conf/linked.data.gov.au/org/agldwg.conf
+++ b/conf/linked.data.gov.au/org/agldwg.conf
@@ -69,6 +69,19 @@ RewriteRule ^/def/iso19160-1-address/Address/code/(.*)$   https://raw.githack.co
 RewriteRule ^/def/iso19160-1-address(.*)$                 https://raw.githack.com/AGLDWG/iso19160-1-address-ont/master/iso19160-1.html$1 [R=302,L]
 
 
+# https://linked.data.gov.au/def/prof-roles
+RewriteCond %{QUERY_STRING} ^_mediatype=text/turtle$ [OR]
+RewriteCond %{HTTP:Accept} text/turtle [NC]
+RewriteRule ^/def/prof-roles$                            https://agldwg.github.io/prof-roles/.ttl [R=302,L]
+RewriteRule ^/def/prof-roles.ttl$                        https://agldwg.github.io/prof-roles/.ttl [R=302,L]
+RewriteRule ^/def/prof-roles$                            https://agldwg.github.io/prof-roles/ [R=302,L]
+RewriteCond %{QUERY_STRING} ^_mediatype=text/turtle$ [OR]
+RewriteCond %{HTTP:Accept} text/turtle [NC]
+RewriteRule ^/def/prof-roles/(.+)$                       https://agldwg.github.io/prof-roles/$1.ttl [R=302,L]
+RewriteRule ^/def/prof-roles/(.+).ttl$                   https://agldwg.github.io/prof-roles/$1.ttl [R=302,L]
+RewriteRule ^/def/prof-roles/(.+)$                       https://agldwg.github.io/prof-roles/$1 [R=302,L]
+
+
 # https://linked.data.gov.au/def/reg-roles
 RewriteCond %{QUERY_STRING} ^_mediatype=text/turtle$ [OR]
 RewriteCond %{HTTP:Accept} text/turtle [NC]
@@ -85,8 +98,8 @@ RewriteRule ^/def/reg-roles/(.+)$                       https://agldwg.github.io
 # https://linked.data.gov.au/def/reg-statuses
 RewriteCond %{QUERY_STRING} ^_mediatype=text/turtle$ [OR]
 RewriteCond %{HTTP:Accept} text/turtle [NC]
-RewriteRule ^/def/reg-statuses$                         https://agldwg.github.io/reg-statuses/.ttl [R=302,L]
-RewriteRule ^/def/reg-statuses.ttl$                     https://agldwg.github.io/reg-statuses/.ttl [R=302,L]
+RewriteRule ^/def/reg-statuses$                         https://agldwg.github.io/reg-statuses/vocabulary.ttl [R=302,L]
+RewriteRule ^/def/reg-statuses.ttl$                     https://agldwg.github.io/reg-statuses/vocabulary.ttl [R=302,L]
 RewriteRule ^/def/reg-statuses$                         https://agldwg.github.io/reg-statuses/ [R=302,L]
 RewriteCond %{QUERY_STRING} ^_mediatype=text/turtle$ [OR]
 RewriteCond %{HTTP:Accept} text/turtle [NC]
@@ -101,3 +114,16 @@ RewriteCond %{QUERY_STRING} ^_mediatype=text/turtle$ [OR]
 RewriteCond %{HTTP:Accept} text/turtle [NC]
 RewriteRule ^/def/supermodel/terms(.*)$                 https://agldwg.github.io/supermodel-terms-vocab$1 [R=302,L]
 RewriteRule ^/def/supermodel/terms(.*)$                 https://agldwg.github.io/supermodel-terms-vocab$1 [R=302,NE,L]
+
+
+# https://linked.data.gov.au/def/vocdermods
+RewriteCond %{QUERY_STRING} ^_mediatype=text/turtle$ [OR]
+RewriteCond %{HTTP:Accept} text/turtle [NC]
+RewriteRule ^/def/vocdermods$                            https://agldwg.github.io/vocab-derivation-modes/.ttl [R=302,L]
+RewriteRule ^/def/vocdermods.ttl$                        https://agldwg.github.io/vocab-derivation-modes/.ttl [R=302,L]
+RewriteRule ^/def/vocdermods$                            https://agldwg.github.io/vocab-derivation-modes/ [R=302,L]
+RewriteCond %{QUERY_STRING} ^_mediatype=text/turtle$ [OR]
+RewriteCond %{HTTP:Accept} text/turtle [NC]
+RewriteRule ^/def/vocdermods/(.+)$                       https://agldwg.github.io/vocab-derivation-modes/$1.ttl [R=302,L]
+RewriteRule ^/def/vocdermods/(.+).ttl$                   https://agldwg.github.io/vocab-derivation-modes/$1.ttl [R=302,L]
+RewriteRule ^/def/vocdermods/(.+)$                       https://agldwg.github.io/vocab-derivation-modes/$1 [R=302,L]
