added strongly-terminated pattern for borehole-status v borehole-status-event

--- a/conf/linked.data.gov.au/org/gsq.conf
+++ b/conf/linked.data.gov.au/org/gsq.conf
@@ -77,6 +77,13 @@ RewriteRule ^/def/borehole-start-point(.*)$ "https://vocabs.gsq.digital/object?v
 RewriteRule ^/def/borehole-start-point(.*)$ "https://vocabs.gsq.digital/object?vocab_id=borehole-start-point&uri=http://linked.data.gov.au/def/borehole-start-point$1" [R=302,NE,L]
 
 
+# https://linked.data.gov.au/def/borehole-status
+RewriteCond %{QUERY_STRING} ^_mediatype=text/turtle$ [OR]
+RewriteCond %{HTTP:Accept} text/turtle [NC]
+RewriteRule ^/def/borehole-status($|/(.*)$) "https://vocabs.gsq.digital/object?vocab_id=borehole-status&uri=http://linked.data.gov.au/def/borehole-status$1&_mediatype=text/turtle" [R=302,L]
+RewriteRule ^/def/borehole-status($|/(.*)$) "https://vocabs.gsq.digital/object?vocab_id=borehole-status&uri=http://linked.data.gov.au/def/borehole-status$1" [R=302,NE,L]
+
+
 # https://linked.data.gov.au/def/borehole-status-event
 RewriteCond %{QUERY_STRING} ^_mediatype=text/turtle$ [OR]
 RewriteCond %{HTTP:Accept} text/turtle [NC]
